--- a/Influencer-style.css
+++ b/Influencer-style.css
@@ -144,12 +144,13 @@
 
  .popular-product {
      width: 20rem;
-     height: 29.2rem;
+     height: 29.5rem;
      border-radius: 5px;
      background: #FFF;
      box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
      padding-left: 50px;
      position: relative;
+     padding-bottom: 20px;
 
  }
 
